--- a/functions/package.json
+++ b/functions/package.json
@@ -17,8 +17,10 @@
     "firebase-functions": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "globals": "^17.3.0"
   },
   "private": true
 }
